initial push again overlap

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Pest Control Near Me | Local Pest Control Services | Call Pest Control EXPERTS</title>
+        <title>Pest Control Near Me | Local Pest Control Services | Call Pest Control Solutions</title>
         <meta name="description"
         content="Your Local Pest Control Professionals. Exterminate Bugs, Insects, Rodents, Critters and more.">
         <meta name="keywords"
@@ -39,7 +39,7 @@
 </head>
 <body class="">
     <header id="header" class="header">
-        <div id="campaign_name" class="hidden">Call Pest Control Experts</div>
+        <div id="campaign_name" class="hidden">Call Pest Control Solutions</div>
         <!-- <div id="areacode" class="hidden">305</div> -->
         <section class="nav">
             <div class="logo">
@@ -47,12 +47,12 @@
 <i class="fas fa-phone"> <!--fa-location-crosshairs-->
 </i>
 </div>
-                <div class="brand">Call Pest Control Experts</div>
+                <div class="brand">Call Pest Control Solutions</div>
             </div>
             <div class="phone">
                 <div class="cta"> <span class="w-2 h-2 inline-block bg-green-500 rounded-full mr-2">
 </span> <span>We Can
-                        Exterminate Today</span> </div> <a href="tel:(855) 999-1602">(855) 999-1602</a>
+                        Exterminate Today</span> </div> <a href="tel:(877) 621-5196">(877) 621-5196</a>
             </div>
         </section>
     </header>
@@ -60,9 +60,9 @@
         <div class="hero-container relative">
             <div class="subtitle"> <u>RESIDENTIAL</u> </div>
             <h1>Pest Control</h1>
-            <p>Same-Day Pest Control & Removal. <br />Call us Now For Fast Service!</p> <a href="tel:(855) 999-1602"
+            <p>Same-Day Pest Control & Removal. <br />Call us Now For Fast Service!</p> <a href="tel:(877) 621-5196"
                 class="hero-btn"> <i class="fas fa-phone-plus">
-</i> (855) 999-1602 </a>
+</i> (877) 621-5196 </a>
             <hr />
             <h3 style="color:white">Calling to Schedule Your Service is <span>
 <u>Quick</u>, <u>Easy</u> &
@@ -127,7 +127,7 @@
                 <li>Yellow Jackets</li>
             </ul>
             <p>Ready to schedule pest control service? We have an exterminator available today! Contact us now at <a
-                    href="tel:(855) 999-1602" class="phone-link">(855) 999-1602</a> to book an appointment or request a quote.</p>
+                    href="tel:(877) 621-5196" class="phone-link"> (877) 621-5196 </a> to book an appointment or request a quote.</p>
             <h3 class="heading-divider">Exterminator Services</h3>
             <p>Whether you need bed bug removal, ant extermination, termite treatment or mosquito prevention services,
                 Pest Appointment is the only company you'll ever have to call.</p>
@@ -137,7 +137,7 @@
                 <li>Pest Removal, Eradication and Prevention</li>
                 <li>Pest Treatment, Fumigation and Spraying</li>
             </ul>
-            <p>Give us a call today at <a href="tel:(855) 999-1602" class="phone-link"> (855) 999-1602 </a> to schedule service or request an
+            <p>Give us a call today at <a href="tel:(877) 621-5196" class="phone-link"> (877) 621-5196 </a> to schedule service or request an
                 estimate. Our pest control experts are available 24/7, ready to take your call.</p>
             <h3 class="heading-divider">About Pest Appointment</h3>
             <p>No matter how big or small your pest problem is, coming to Pest Appointment is the perfect first step.
@@ -167,7 +167,7 @@
                         completely free of charge.</p>
                 </li>
             </ul>
-            <p>Have a question? Give us a call at <a href="tel:(855) 999-1602" class="phone-link">(855) 999-1602</a> to speak with a pest control
+            <p>Have a question? Give us a call at <a href="tel:(877) 621-5196" class="phone-link"> (877) 621-5196 </a> to speak with a pest control
                 specialist or request a no-obligation estimate.</p>
             <h3 class="heading-divider">How It Works</h3>As a part of eLocal's family of brands, Pest Appointment exists
             to cut out the hassle of finding an exterminator for homeowners like you. Don't waste time hunting down
@@ -191,7 +191,7 @@
             <hr />
             <p>We're here to relieve the stress from all your pest problems! Our customer service agents are available
                 24/7 to take your call.
-                Contact us today at <a href="tel:(855) 999-1602" class="phone-link">(855) 999-1602</a> for fast, friendly service.</p>
+                Contact us today at <a href="tel:(877) 621-5196" class="phone-link"> (877) 621-5196 </a> for fast, friendly service.</p>
         </article>
     </section>
     <footer class="footer">
@@ -199,28 +199,28 @@
             <div class="footer-hero">
                 <div class="badge">Residential</div>
                 <h4>Pest Control</h4>
-                <p>Eliminate Bugs, Insects & Rodents. <br />Call Now: <a href="tel:(855) 999-1602">(855) 999-1602</a>
+                <p>Eliminate Bugs, Insects & Rodents. <br />Call Now: <a href="tel:(877) 621-5196">(877) 621-5196</a>
 </p>
             </div>
             <hr />
             <div class="flex flex-col lg:flex-row lg:items-center lg:justify-between text-center lg:text-left mb-10">
-                <p>&copy; 2025 CallPestControlEXPERTS.vercel.app</p>
+                <p>&copy; 2025 CallPestControlSolutions.vercel.app</p>
                 <ul class="flex items-center justify-center lg:justify-end space-x-4 lg:space-x-5 mt-2 lg:mt-0">
                     <li> <a href="privacy/index.html"> Privacy Policy </a> </li>
                     <li> <a href="terms/index.html"> Terms of Service </a> </li>
                     <li> <a href="do-not-sell-my-info/index.html"> Do Not Sell </a> </li>
                 </ul>
             </div>
-            <p>Call Pest Control EXPERTS is a free service that helps homeowners connect with local service providers. All
-                contractors are independent and Call Pest Control EXPERTS does not warrant or guarantee any work performed. It is
+            <p>Call Pest Control Solutions is a free service that helps homeowners connect with local service providers. All
+                contractors are independent and Call Pest Control Solutions does not warrant or guarantee any work performed. It is
                 the responsibility of the homeowner to verify the contractor they hire has the necessary license and
                 insurance required for the work being performed. eLocal Verified status only represents confirmation of
                 a business's service area and business category.</p>
         </div>
     </footer>
-    <div class="sticky-footer" id="sticky-footer"> <a href="tel:(855) 999-1602"> Schedule or Get a Quote <i
+    <div class="sticky-footer" id="sticky-footer"> <a href="tel:(877) 621-5196"> Schedule or Get a Quote <i
                 class="fas fa-arrow-right">
-</i> <span class="hidden">(855) 999-1602</span> </a>
+</i> <span class="hidden">(877) 621-5196</span> </a>
 </div>
         <script
         type="speculationrules">{"prefetch":[{"source":"document","where":{"and":[{"href_matches":"\/*"},{"not":{"href_matches":["\/wp-*.php","\/wp-admin\/*","\/wp-content\/uploads\/*","\/wp-content\/*","\/wp-content\/plugins\/*","\/wp-content\/themes\/pest-appointment\/*","\/*\\?(.+)"]}},{"not":{"selector_matches":"a[rel~=\"nofollow\"]"}},{"not":{"selector_matches":".no-prefetch, .no-prefetch a"}}]},"eagerness":"conservative"}]}</script>
