Update index.html (remove same-day)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="hero-container relative">
             <div class="subtitle"> <u>RESIDENTIAL</u> </div>
             <h1>Pest Control</h1>
-            <p>Same-Day Pest Control & Removal. <br />Call us Now For Fast Service!</p> <a href="tel:(877) 621-5196"
+            <p>Emergency Pest Control & Removal. <br />Call us Now For Fast Service!</p> <a href="tel:(877) 621-5196"
                 class="hero-btn"> <i class="fas fa-phone-plus">
 </i> (877) 621-5196 </a>
             <hr />
